# savvyo-work-distribution

./: .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  VPN_CONTROLS_API_DOCUMENTATION.md  caf.py  database_backup.sh  database_clear_table_content.py  database_print_tables.py  database_restore.sh  docker-compose.yml  git_test.py  host_work_manager.py  inspector.py  main.py  match_host_entry.py  match_worker_entry.py  nosleep.py  pyproject.toml  rapid_test_ASEs-MacBook-Pro.local_1312_2d768e94_0.json  rapid_test_ASEs-MacBook-Pro.local_1312_2d768e94_1.json  rapid_test_ASEs-MacBook-Pro.local_1312_2d768e94_2.json  rapid_test_ASEs-MacBook-Pro.local_1804_0aced054_0.json  rapid_test_ASEs-MacBook-Pro.local_1804_0aced054_1.json  rapid_test_ASEs-MacBook-Pro.local_1804_0aced054_2.json  rapid_test_ASEs-MacBook-Pro.local_2078_22791d1c_0.json  rapid_test_ASEs-MacBook-Pro.local_2078_22791d1c_1.json  rapid_test_ASEs-MacBook-Pro.local_2078_22791d1c_2.json  rapid_test_Blecks-MacBook-Pro.local_90303_a0ba30b7_0.json  rapid_test_Blecks-MacBook-Pro.local_90303_a0ba30b7_1.json  rapid_test_Blecks-MacBook-Pro.local_90303_a0ba30b7_2.json  rapid_test_Blecks-MacBook-Pro.local_91550_708f7abf_0.json  rapid_test_Blecks-MacBook-Pro.local_91550_708f7abf_1.json  rapid_test_Blecks-MacBook-Pro.local_91550_708f7abf_2.json  rapid_test_Blecks-MacBook-Pro.local_92034_9575ce43_0.json  rapid_test_Blecks-MacBook-Pro.local_92034_9575ce43_1.json  rapid_test_Blecks-MacBook-Pro.local_92034_9575ce43_2.json  reset_claims.py  run_host.py  run_workers.py  (+23 more)
.execution_files/: database_backup_summary.sh  run.sh  (+4 more)
(+22488 files in other folders)
