[project]
name = "savvyo_data_collector"
version = "0.1.0"
description = "This is the console to collect data from transfermarkt.com and other sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "ruff>=0.12.0",
    "schedule>=1.2.2",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.3",
    "tabulate>=0.9.0",
    "textual>=5.2.0",
]
